--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-aside/app-aside.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-aside/app-aside.component.html
@@ -1,3 +1,5 @@
-<aside class="aside-menu">
+<aside class="aside-menu" *ngIf="asideService.enabled">
+    <ng-container *ngTemplateOutlet="asideService.content">
+    </ng-container>
 
 </aside>
