added very important icons ;)

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-edit.component.html
@@ -46,13 +46,13 @@
         <tab>
             <ng-template tabHeading><i class="icon-settings"></i></ng-template>
             <div class="p-3">
-                <h6>General</h6>
+                <h6><i class="fa fa-gear"></i> General</h6>
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" class="form-control form-control-sm" id="name" placeholder="Name">
                 </div>
                 <hr>
-                <h6>Scheduling</h6>
+                <h6><i class="fa fa-calendar"></i> Scheduling</h6>
                 <div class="form-group">
                     <label for="publishedFrom">Published From</label>
                     <input type="text" class="form-control form-control-sm" id="publishedFrom" placeholder="Published From">
@@ -63,10 +63,10 @@
                     <input type="text" class="form-control form-control-sm" id="publishedUntil" placeholder="Published Until">
                 </div>
                 <hr>
-                <h6>Status</h6>
+                <h6><i class="fa fa-power-off"></i> Status</h6>
                 <label class="switch switch-label switch-pill switch-outline-success-alt"><input checked="" class="switch-input" type="checkbox"><span class="switch-slider" data-checked="On" data-unchecked="Off"></span></label>
                 <hr>
-                <h6>Navigation</h6>
+                <h6><i class="fa fa-navicon"></i> Navigation</h6>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
                     <label class="form-check-label" for="defaultCheck1">
