separate lists from index to make them reusable

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-selector.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-selector.component.html
@@ -35,6 +35,6 @@
         </button>
     </div>
     <div class="modal-body">
-        <media-modal-list (onSelect)="onSelect($event)"></media-modal-list>
+        <media-list (onSelect)="onSelect($event)"></media-list>
     </div>
 </ng-template>
