--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-list.component.html
@@ -1,6 +1,7 @@
 <div class="row text-center text-lg-left" *ngIf="uploader">
 
-    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
+    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12"
+         *can="['admin.api.'+resourceKey+'.upload']">
         <div class="d-block mb-4 h-100" ng2FileDrop [uploader]="uploader">
             <div class="upload-container">
                 <div class="drop-box">
@@ -8,14 +9,14 @@
                         <button class="btn btn-primary" type="button">Choose a file</button>
                         <p>or drag it here</p>
                     </div>
-                    <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple>
+                    <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple/>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <div *ngFor="let item of uploader.queue" class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
+    <div *ngFor="let item of uploader.queue" class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="d-block mb-4 h-100">
             <div *ngIf="isImage(item?.file?.type)" class="media-container">
                 <div class="media-icon">
@@ -47,8 +48,8 @@
         </div>
     </div>
 
-    <div *ngFor="let media of (models$ | async)" class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
-        <div class="d-block mb-4 h-100" (click)="select(media)">
+    <div *ngFor="let media of (models$ | async)" class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6">
+        <div class="d-block mb-4 h-100">
             <div *ngIf="isImage(media.mimeType)" class="media-container">
                 <div class="media-image"
                      [ngStyle]="{backgroundImage: 'url(/media/img/admin-thumb/' + media.basePath + media.filename + ')'}"></div>
