fix sitemap index / list locale change for page creation

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/components/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/components/sitemap-list.component.html
@@ -4,7 +4,9 @@
             <ng-select [items]="locales"
                        bindLabel="name"
                        bindValue="locale"
-                       [(ngModel)]="selectedLocale" [clearable]="false"></ng-select>
+                       [(ngModel)]="selectedLocale"
+                       [clearable]="false"
+                       (change)="onChangeLocale($event)"></ng-select>
         </div>
     </div>
     <ng-container *ngIf="items.length === 0">
