--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-index.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="card-body">
-        <sitemap-list></sitemap-list>
+        <sitemap-list (changeLocale)="onChangeLocale($event)"></sitemap-list>
     </div>
 </div>
