page navigation & sitemap link fixes

--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_tree.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_tree.scss
@@ -14,6 +14,10 @@
     padding: 0 0 0 20px !important;
     border: none !important;
     background-color: transparent !important;
+
+    sitemap-list > sitemap-list-container > & {
+        padding: 0 !important;
+    }
 }
 
 .ngx-dnd-container.gu-empty {
