--- a/projects/kiwi-suite/ngx-admin/src/lib/views/link/components/sitemap-modal-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/link/components/sitemap-modal-list.component.html
@@ -1,17 +1,18 @@
-
 <ng-container *ngIf="(models$ | async) as items">
     <div class="row">
         <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
-            <ng-select [items]="locales" bindLabel="name" bindValue="locale" [(ngModel)]="selectedLocale" [clearable]="false"></ng-select>
+            <ng-select [items]="locales"
+                       bindLabel="name"
+                       bindValue="locale"
+                       [(ngModel)]="selectedLocale"
+                       [clearable]="false"></ng-select>
         </div>
     </div>
-
     <ng-container *ngIf="items.length === 0">
         No Pages
     </ng-container>
     <ng-container *ngIf="items.length > 0">
         <sitemap-modal-list-item [items]="items" [locale]="selectedLocale" (onSelect)="select($event)">
-
         </sitemap-modal-list-item>
     </ng-container>
 </ng-container>
