--- a/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-index.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">
         <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
-            <a routerLink="/resource/{{ resourceKey }}/create"
+            <a routerLink="/{{ resourceKey }}/create"
                *can="['admin.api.'+resourceKey+'.create']">
                 <i class="fa fa-plus"></i>
             </a>
