--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-content/app-content.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-content/app-content.component.html
@@ -1,26 +1,21 @@
-<div class="content-container no-gutters row h-100">
-    <div [ngClass]="{'col-lg-8': aside, 'col-xl-9': aside}" class="col-xs-12 col-sm-12 col-md-12 h-100">
-        <div class="title-container">
-            <div class="container-fluid h-100">
-                <div class="row align-items-center h-100">
-                    <div class="col-xs-12 col-sm-12 col-md-5">
-                        <h4>{{ title }}</h4>
-                    </div>
-                    <div class="col-md-7" *ngIf="headerContent">
-                        <ng-container *ngTemplateOutlet="headerContent"></ng-container>
-                    </div>
+<main class="content-container no-gutters h-100 main">
+    <div class="page-title-container" #titleContainer>
+        <div class="container-fluid h-100">
+            <div class="row align-items-center h-100">
+                <div class="col-sm-5">
+                    <h4 class="mb-2 mb-sm-0">{{ title }}</h4>
+                </div>
+                <div class="col-sm-7" *ngIf="headerContent">
+                    <ng-container *ngTemplateOutlet="headerContent"></ng-container>
                 </div>
             </div>
         </div>
-
-        <div>
-            <div class="container-fluid mt-3" *ngIf="mainContent">
-                <ng-container *ngTemplateOutlet="mainContent"></ng-container>
-            </div>
-        </div>
-
     </div>
-    <div *ngIf="aside" class="content-aside col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-3 h-100">
-        <ng-container *ngTemplateOutlet="asideContent"></ng-container>
+    <div class="container-fluid mt-4" *ngIf="mainContent" [style.paddingTop]="headerHeight + 'px'">
+        <ng-container *ngTemplateOutlet="mainContent"></ng-container>
     </div>
-</div>
+</main>
+
+<app-aside *ngIf="asideContent">
+    <ng-container *ngTemplateOutlet="asideContent"></ng-container>
+</app-aside>
