--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
@@ -70,6 +70,11 @@ input[type="color"] {
     > * {
         display: flex;
         flex: 1;
+
+        > form {
+            display: flex;
+            flex: 1;
+        }
     }
 
     app-content {
